force-app/main/default/objects/Branded_CommunitySite_URLs__c/Branded_CommunitySite_URLs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To use in case formula field</description>
    <label>Branded Community Site URLs</label>
</CustomObject>