force-app/main/default/objects/Branded_CommunitySite_URLs__c/fields/Fiat_Brand_Site__c.field-meta.xml
<CustomField>
    <fullName>Fiat_Brand_Site__c</fullName>
    <description>These are custom setting used in Gb-1155 and being used in Case formula field. It is used to store the URL of the Fiat Brand Site</description>
    <label>Fiat Brand Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>