force-app/main/default/objects/Branded_CommunitySite_URLs__c/fields/Jeep_Brand_Site__c.field-meta.xml
<CustomField>
    <fullName>Jeep_Brand_Site__c</fullName>
    <description>These are custom setting used in Gb-1155 and being used in Case formula field. It is used to store the URL of the Jeep Brand Site</description>
    <label>Jeep Brand Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>