force-app/main/default/objects/Branded_CommunitySite_URLs__c/fields/RAM_Branded_Site__c.field-meta.xml
<CustomField>
    <fullName>RAM_Branded_Site__c</fullName>
    <description>These are custom setting used in Gb-1155 and being used in Case formula field. It is used to store the URL of the RAM Brand Site</description>
    <label>RAM Branded Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>